[workspace]
members = [
	"crates/algo",    #async
	"crates/async",   #async
	"crates/closure", #closure
	"crates/macro",   #macro
	"crates/tokio",   #tokio
]


# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.72"
license = "MIT"
homepage = "https://github.com/0xgecko/rgecko"
repository = "https://github.com/0xgecko/rgecko"
exclude = [".github/"]
