[package]
name = "tokio-ss"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Tokio samples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
futures = { version = "0.3.1", package = "futures", features = ["compat"] }
serde = { version = "1.0.132", package = "serde", features = ["derive"] }
serde_json = { version = "1.0.59", package = "serde_json" }
